Bug 371653 - crash in [@ nsMsgAccountManager::GetIncomingServer] when getPrefService has not been called. r=Standard8